<resources>
    <string name="app_name">My Events</string>
    <string name="action_settings">Settings</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="login_button">LOG IN</string>
    <string name="or">OR</string>
    <string name="username">Username</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="set_date">Set Date</string>
    <string name="add_event">Add Event</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="tips">Swipe to Remove Event</string>
    <string name="logout">Log Out</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
</resources>