<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.AddEvent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/add_event_input_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="textShortMessage" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/add_event_input_margin"
        android:hint="@string/subtitle">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/event_sub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textLongMessage" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_event_text_margin"
            android:layout_weight="1" />

        <Button
            android:id="@+id/set_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_event_button_margin"
            android:layout_weight="3"
            android:background="@drawable/set_date_button"
            android:onClick="buttonClick"
            android:text="@string/set_date"
            android:textColor="@color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/add_event_button_margin"
        android:background="@drawable/add_event_button"
        android:onClick="buttonClick"
        android:text="@string/save"
        android:textColor="@color/white" />

</LinearLayout>